--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
+    "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.12",
+    "@mui/x-data-grid": "^6.16.2",
     "next": "^13.5.4",
     "react": "^18",
     "react-dom": "^18"
