--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
-    "next": "^13.5.4",
+    "@mui/x-data-grid": "^6.16.2",
+    "next": "^13.5.5",
     "react": "^18",
     "react-dom": "^18"
   },
